Inventaire terminé, boucle de tour fonctionnelle, drops spécifiques à chaque Ennemi (commencé).